src/App.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Poppins", sans-serif;
}

.hbtn{
  clip-path: polygon(0% 0%, 91% 0%, 100% 100%, 0% 100%);
}

.hbtns{
  clip-path: polygon(0% 0%,   100% 0%, 100% 100%, 11.5% 100%);
}

.navlinks{
  clip-path: polygon(-6000% 0%, 98% 0%, 100% 100%, 0% 100%);
}


.image-container {
  position: relative;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

.image-container img {
  object-fit: cover;
}

.zoomed {
  animation: zoomAnimation 3s forwards; 
}

@keyframes zoomAnimation {
  from {
    transform: scale(1);
  }
  to {
    transform: scale(1.2); /* Adjust the zoom level */
  }
}



/* nav container */

.sidenav {
  transition: transform 0.3s ease-in-out; /* Adjust the duration and timing function as needed */
  transform: translateX(-100%);
  position: fixed !important;
  top: 0;
  left: 0;
  height: 100%;
  width: 300px;
  background-color: #222;
  z-index: 999;
  overflow-y: auto;
}

.sidenav.show {
  transform: translateX(0);
}

.nav-bottom::before{
  content:" ";
  display: table;
  position: absolute;
    background: #222;
    top: 0;
    width: 52%;
    left: 0%;
    height: 64px;
    z-index: -1;
}

/* 
.search::after{
  position: absolute;
  display: block;
  border-bottom: 64px solid #222;
  content: '';
  display: table;
  right: 17.4%;
  top: 0px;
  border-right: 20px solid transparent;
  z-index: -1;
} */

.section_curve{
  position: absolute !important;
  top: -68px;
  left: 0;
  width: 100%;
  height: 70px;
  text-align: center;
  opacity: 1 !important;
  z-index: 9;
  /* background-color: blueviolet; */
}

.option:hover{
  background-color: #ecba00 !important;
}

@keyframes cursorAnimation {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.cursor-animate {
  animation: cursorAnimation 1s infinite; /* Adjust the animation duration */
}


/* 3D CSS */

.wrapper{
  display: flex;
  align-items: center;
  justify-content: center;
}
.box{
  margin: 20px;
}
.single-box{
  width: 350px;
  height: 350px;
  perspective: 1200px;
}
.box-content{
  width: 100%;
  height: 100%;
  position: relative;
  transform-style: preserve-3d;
  transform: translateZ(-150px);
  transition: all 1s;
}
.sides{
  position: absolute;
  width: 350px;
  height: 350px;
  text-align: center;
}
.side-1{
  transform: rotateY(0deg) translateZ(150px);
  backface-visibility: hidden !important;
  z-index: 2;
}
.side-2{
  transform: rotateY(90deg) translateZ(150px);
  backface-visibility: hidden !important;
}
.box:hover .box-content{
  transform: translateZ(-150px) rotateY(-90deg);
}
.content{
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: 100%;
}


@media (max-width:991px){
  .wrapper{
      flex-direction: column;
  }
}


/* Vehicle Types */

.hid{
  overflow: hidden;
}


/* First & Last child */
@media screen and (min-width: 1200px) {
  .hid:nth-child(1) div{
    transform: skewX(20deg);
    position: relative;
    left:25px;
  }
  
  .hid:nth-child(4) div{
    transform: skewX(20deg);
    position: relative;
    left:-25px;
  }
  
  .hid:nth-child(1) .test div, .hid:nth-child(4) .test div{
    transform: skewX(-20deg);
    
  }
  
  
  /* Second & Third child */
  .hid:nth-child(2) div{
    transform: skewX(-20deg);
    position: relative;
    left:-25px;
  }
  
  .hid:nth-child(3) div{
    transform: skewX(-20deg);
    position: relative;
    left:25px;
  }
  
  .hid:nth-child(2) .test div, .hid:nth-child(3) .test div{
    transform: skewX(20deg);
    
  }
    
}

.test{
  transition: all 0.3s ease-in-out;
}
.test:hover{
  border-bottom:#ecba00 6px solid;
  background: #282929;
  color: aliceblue;
}

.skewTitle{
  border-bottom: 3px solid #ecba00;

}


/* offer section */
@media only screen and (min-width: 800px) {
/* 
  .price {
    position: relative;
  }

  .price::before{
    content:" ";
    display: block;
    background: #ecba00;
    height: 30px;
    width: 100%;
    position: relative;
    top:1px;
    z-index: 999;
    clip-path: polygon(0% 90%, 100% 0%, 100% 100%, 0% 100%);
  }

 .price:hover::before{
    background: #222;
 }
   */
.price{
  padding-top: 30px !important; 
   clip-path: polygon(0% 40%, 100% 0%, 100% 100%, 0% 100%);
}

}

.price{
  transition: all 0.3s ease-in-out;
}



/* Services */

.services{
  background-color: rgba(0,0,0,0.7) !important;
}

.ser-card {
  width: 90%;
  height: 300px;
  cursor: all-scroll;
  
}

.ser-content {
  
  position: relative;
  transition: all 1s;
  background-color: white;
  padding-bottom: 15em;
  transform-style: preserve-3d;
}

.ser-card:hover .ser-content {
  transform: rotateY(0.5turn);
}

.ser-front,
.ser-back {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  padding: 2em;
  transform-style: preserve-3d;
  backface-visibility: hidden;
}

.ser-title {
  transform: translateZ(5rem);
  font-size: 2rem;
}

.ser-subtitle {
  transform: translateZ(2rem);
}

.ser-back {
  transform: rotateY(0.5turn);
  background-color: #ecba00;
  color:white;
}

.ser-description {
  transform: translateZ(3rem);
}



.slick-dots li.slick-active button::before{
  color: #ecba00 !important;
  opacity: 1 !important;
  content :"■" !important;
}

.slick-dots li button::before{
  color: #f6f6f6 !important;
  opacity: 100 !important;
  content :"■" !important;
  font-size: 20px !important;
}

.ser-b::after{
  content:" ";
  display: table;
  position: relative;
    background: #ecba00;
    top: 10px;
    width: 20%;
    left: 0%;
    height: 3px;
}


/* About */
@media only screen and (max-width:767px){
  .about{
    height: 480px;
  }
}

@media only screen and (max-width:500px){
  .about{
    height: 230px;
  }
}



@media only screen and (max-width:300px){
  .about{
    height: 100px;
  }
}
/* Grow Animation sales-card*/

@keyframes growContent {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}

.sale-card {

  overflow: hidden; /* Hide overflow when content grows */

}
.sale-card:hover .contentA {
display: none !important;
opacity: 0 ; /* Hide contentA on hover */
}

.contentB {
  animation: growContent 0.3s ease-in-out;
  animation-fill-mode: both;
  display: none; /* Initially hide contentB */
}

.sale-card:hover .contentB {
  display: block;
  width:100%;
  height:100%;/* Show contentB on hover */
}


/* GALLERY CSS */
.g-box{
  position: relative;
  overflow: hidden;
  cursor: pointer;
}

.g-overlay {
  position:absolute;
  width:100%;
  height:100%;
  top:0;
  left:0;
  bottom:0;
  right:0;
  opacity:0;
  background-color: rgba(0,0,0,0.7);
  padding:10px;
  -webkit-transition: all 0.4s ease-in-out 0s;
  -moz-transition: all 0.4s ease-in-out 0s;
  transition: all 0.4s ease-in-out 0s;
  z-index: 999;
}

.g-content {
  width:100%;
  height:100%;
  color: #fff;
}

.g-box:hover .g-overlay{
 opacity:1;
}


/* Team Member */
.m-box{
  position: relative;
  overflow: hidden;
}
.m-overlay {
  position:absolute;
  width:100%;
  height:100%;
  top:100%;
  left:0;
  bottom:0;
  right:0;
  opacity:0;
  background-color: rgba(0,0,0,0.4);
  padding:10px;
  -webkit-transition: all 0.4s ease-in-out 0s;
  -moz-transition: all 0.4s ease-in-out 0s;
  transition: all 0.4s ease-in-out 0s;
  z-index: 999;
}

.m-content {
  width:100%;
  height:100%;
  color: #fff;
}

.m-box:hover .m-overlay{
 opacity:1;
 top:0;
}

/* Blog slide animation */

.slide{
  width: 115% !important;
  transform: translateX(-15%);
  transition: all 1s ease-in-out;
}

.slide:hover{
  transform: translateX(0%);
}


/* Footer */

.subscribe{
  transform: skewX(30deg);
  z-index: 10;
}

.subscribe h1{
  transform: skewX(-30deg);
}

.mail{
  transform: skewX(-30deg);
  z-index: 8;
}

.mail div{
  transform: skewX(30deg);
}


/* FOOTER */
.footer-b::after{
  content:" ";
  display: table;
  position: relative;
    background: #ecba00;
    top: 10px;
    width: 15px;
    left: 0%;
    height: 3px;
}



/* Members */
.box {
  position: relative;
  overflow: hidden;
}

.box img {
  width: 100%;
  display: block;
}

.overlay {
  width: 100%;
  height: 0;
  background-color: rgba(0, 0, 0, 0.5);
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  text-align: center;
  transition: height 0.5s;
}

.overlay h3 {

  margin-bottom: 5px;
  margin-top: 0; /* Adjusted to align text at the bottom */

}

.box:hover img {
  /* transform: scale(1.1); */
}

.box:hover .overlay {
  height: 100%;
  transform: translateY(0); /* Added to align the overlay at the bottom */
}

